--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body, html {
 .game-container {
   width: 100vw;
   height: 100vh;
-  background-image: url('https://raw.githubusercontent.com/Ben00000000/asstes/main/battlefiled.png');
+  background-image: url('https://raw.githubusercontent.com/Ben00000000/asstes/main/bgnew.png');
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
@@ -19,9 +19,10 @@ body, html {
 
 #player {
   position: absolute;
+  left:50%;
+  top:50%;
   width: 100px; /* Individual frame width */
   height: 100px; /* Individual frame height */
-  background-image: url('https://raw.githubusercontent.com/Ben00000000/asstes/main/idle100px.png');
   animation: playerIdle 0.5s steps(3) infinite;
   z-index: 1;
 }
@@ -55,7 +56,6 @@ body, html {
   position: absolute;
   width: 48px; /* Individual frame width */
   height: 48px; /* Individual frame height */
-  background-image: url('https://raw.githubusercontent.com/Ben00000000/asstes/main/eyeball.png');
   animation: enemyAnimation 1s steps(4) infinite;
   z-index: 2;
 }
@@ -160,6 +160,7 @@ body, html {
   position: absolute;
   top: 10px;
   right: 10px;
+  z-index: 1200;
 }
 #hpBar {
   position: fixed;
@@ -171,4 +172,41 @@ body, html {
   background-color: green; /* Red color for HP bar */
   opacity: 0.5;
   border-radius: 10px;
+}
+ #gameOverScreen {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  flex-direction: column; /* Updated to a column layout */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+  z-index: 1100;
+}
+
+#gameOverScreen h1 {
+  font-size: 2em;
+  margin-bottom: 10px; /* Adjusted margin for better spacing */
+}
+
+
+
+#restartButton {
+  padding: 10px 20px;
+  background-color: #3498db;
+  color: white;
+  text-decoration: none;
+  font-size: 1.2em;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#restartButton:hover {
+  background-color: #2980b9;
 }
